--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "localforage": "^1.5.0",
     "node-sass": "^4.5.3",
     "nuxt": "^0.10.6",
     "pug": "^2.0.0-rc.2",
