--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spa",
+  "name": "market",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,11 +8,11 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "predeploy": "npm run generate",
     "deploy": "npx gh-pages -d dist"
   },
   "keywords": [],
-  "author": "userbq201<yzdrf98@mail.ru>",
+  "author": "Dmitry Shelomanov<dmitryshelomanov@mail.ru>",
+  "homepage": "dmitryshelomanov.github.io",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
@@ -26,5 +26,8 @@
     "pug": "^2.0.0-rc.2",
     "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.6"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
